# noai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skill.md
.trae/skills/github-repo-publisher/: SKILL.md
docs/: API.md  ARCHITECTURE.md  USAGE.md
examples/: basic_usage.py  custom_summary.py  listen_only.py
meeting_agent/: __init__.py  agent.py  config.py  lark_cli.py  main.py  requirements.txt
meeting_agent/meeting/: __init__.py  listener.py  manager.py  messenger.py
meeting_agent/summary/: __init__.py  engine.py  todos.py  topics.py
